<resources>
    <string name="full_app_name">EBTCalc for Android</string>
	<string name="main_activity_force_portrait">true</string>
	<string name="edit_methods_activity_force_portrait">true</string>
	<string name="run_methods_activity_force_portrait">true</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_not_granted">Permissions were not granted.\n\nEBTCalc will not function correctly until permissions are granted.\n\nPermissions are necessary to read and write custom button source code.\n\nClick \"Request Permissions\" to grant permissions.</string>
    <string name="game_over">EBTCalc will not function without permissions. Please un-install EBTCalc.</string>
    <string name="app_version"></string>
    <string name="app_store"></string>
    <string name="paid_version_url"></string>
    <string name="bn_EAN"></string>
    <string name="online_help_url">https://www.ericbt.com/EBTCalc</string>
    <string name="ebtcalc_desktop_url">https://ericbt.com/ebtcalc_electron</string>
    <string name="text_class">Category:</string>
    <string name="class_method_separator">.</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="ok_button_text">OK</string>
    <string name="save_button_text">Save</string>
    <string name="edit_button_text">Edit</string>
    <string name="export_button_text">Export</string>
    <string name="import_button_text">Import</string>
    <string name="update_builtins_button_text">Update Built-In Code</string>
    <string name="updown_button_text">↑↓</string>
    <string name="settings_button_text">Settings</string>
    <string name="advanced_button_text">Advanced</string>
    <string name="main_title">%s</string>
    <string name="runtime_error_title">%s - Runtime Error</string>
    <string name="edit_methods_title">%s - Edit</string>
    <string name="run_methods_title">%s - Run Methods</string>
    <string name="about_title">%s - About</string>
	<string name="license_terms_title">%s - License Terms</string>
	<string name="enter_string_title">%s - Enter String</string>
	<string name="upgrade_title">%s - Upgrade</string>
	<string name="stack_contents_title">%s - Stack Contents</string>
	<string name="fix_syntax_errors_and_warnings">Fix Errors/Warnings</string>
	<string name="issue_menu_error">Error: %s</string>
	<string name="issue_menu_warning">Warning: %s</string>
	<string name="spinner_select_prompt">(select)</string>
    <string-array name="keyclick_volume_strings">
        <item>0 (off)</item>
        <item>1 (least loud)</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 (loudest)</item>
    </string-array>
    <string-array name="keyclick_volume_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="method_timeout_strings">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>45 seconds</item>
        <item>60 seconds</item>
        <item>no timeout</item>
	</string-array>
    <string-array name="method_timeout_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>0</item>
	</string-array>
    <string name="min_width_for_two_column_display">1024</string>
</resources>